# gw2-Chatlogger

./: .gitignore  GW2-Chatlogger.sln  Gw2-Chatlogger.py  OcrTest.sln  README.md  form.ui  gw2chatlogger.sln  gw2chatlogger.spec  main.py  rectangle.py  requirements.txt  setup.py  textOptimize.py
.claude/: settings.local.json
.github/workflows/: build.yml
GW2-Chatlogger/: GW2-Chatlogger.vcxproj  configurator.cpp  configurator.h  gw2chatlogger.cpp  gw2chatlogger.h  gw2chatlogger.qrc  gw2chatlogger.ui  logger.cpp  logger.h  main.cpp
OcrTest/: Main.cpp  OcrTest.vcxproj
addon/: CMakeLists.txt  README.md  toolchain-mingw64.cmake
addon/include/: arcdps.h  extras_chat_api.h
addon/src/: main.cpp
addon/tools/: fake_writer.py
gImageReader-3.4.0/: CMakeLists.txt
gImageReader-3.4.0/qt/data/: MainWindow.ui
gImageReader-3.4.0/qt/src/: MainWindow.cc  Recognizer.hh  Ui_MainWindow.hh
gw2chatlogger/: gw2chatlogger.cpp  gw2chatlogger.h  gw2chatlogger.sln  gw2chatlogger.ui  gw2chatlogger.vcxproj  gw2chatlogger.vcxproj.filters  optionsTab.cpp  optionsTab.h
gw2chatlogger/gw2chatlogger/: gw2chatlogger.cpp  gw2chatlogger.h  gw2chatlogger.qrc  gw2chatlogger.ui  gw2chatlogger.vcxproj  gw2chatlogger.vcxproj.filters  main.cpp
packaging/: build-appimage.sh
qt/src/: MainWindow.cc  MainWindow.hh
src/: capture.py  formatting.py  log_reader.py  log_writer.py  main.py  ocr_engine.py  paths.py  session.py  session_manager.py  settings.py  text_dedupe.py  ui.py  window_monitor.py  workers.py
